UPD: added sleepAndFetch
