# core/src/main/kotlin/org/springframework/samples/petclinic/rest/SleepController.kt
@@ -5,6 +5,7 @@ import org.springframework.boot.autoconfigure.condition.ConditionalOnWebApplicat
 import org.springframework.context.annotation.Profile
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
+import org.springframework.samples.petclinic.rest.api.SleepAndFetchApi
 import org.springframework.samples.petclinic.rest.api.SleepApi
 import org.springframework.samples.petclinic.service.JdbcClinicService
 import org.springframework.web.bind.annotation.RestController
@@ -12,9 +13,13 @@ import org.springframework.web.bind.annotation.RestController
 @RestController
 @ConditionalOnWebApplication(type = SERVLET)
 @Profile("jdbc")
-class SleepController(private val clinicService: JdbcClinicService) : SleepApi {
+class SleepController(private val clinicService: JdbcClinicService) : SleepApi, SleepAndFetchApi {
     override fun sleep(times: Int, millis: Int, zip: Boolean): ResponseEntity<Unit> {
         clinicService.sleep(times, millis)
         return ResponseEntity(HttpStatus.OK)
+    }
+
+    override fun sleepAndFetch(times: Int, millis: Int, strings: Int, length: Int): ResponseEntity<List<String>> {
+        return ResponseEntity(clinicService.sleepAndFetch(times, millis, strings, length), HttpStatus.OK)
     }
 }
